--- a/homepage/bad.css
+++ b/homepage/bad.css
@@ -1,102 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap");
 
+/* note: used MDN for documentation */
 
-
-  h1, h2, h3, h4, h5 {
-    font-family: 'Arial', sans-serif;
-    font-weight: 900;
-    background-image: linear-gradient(to right, indigo, blue, green, yellow, orange);
-    }
-
-
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Arial", sans-serif;
+  font-weight: 900;
+  background-image: linear-gradient(
+    to right,
+    indigo,
+    blue,
+    green,
+    yellow,
+    orange
+  );
+}
 
 .wrapper {
-    background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-    display: grid;
-    padding: 10pt;
-    gap: 2pt;
-    background-color: bisque;
-    color: #000000;
-    font-family: 'Tilt Prism', sans-serif;
-    grid-template-columns: 50% auto;
-    grid-template-areas:
-     "sidebar header"
-     "sidebar nav"
-     "sidebar content"
-  }
+  background-image: linear-gradient(
+    to left,
+    violet,
+    indigo,
+    blue,
+    green,
+    yellow,
+    orange,
+    red
+  );
+  display: grid;
+  padding: 10pt;
+  gap: 2pt;
+  background-color: bisque;
+  color: #000000;
+  font-family: "Tilt Prism", sans-serif;
+  grid-template-columns: 50% auto;
+  grid-template-areas:
+    "sidebar header"
+    "sidebar nav"
+    "sidebar content";
+}
 
+.header {
+  grid-area: header;
+  text-align: center;
+}
 
-    .header {
-        grid-area: header;
-        text-align: center;
-    }
+.sidebar {
+  grid-area: sidebar;
+  text-align: center;
+}
 
-    .sidebar {
-        grid-area: sidebar;
-        text-align: center;
-    }
+.content {
+  padding: 10pt;
+  padding-left: 20pt;
+  padding-right: 20pt;
+  grid-area: content;
+}
 
-    .content {
-        padding: 10pt;
-        padding-left: 20pt;
-        padding-right: 20pt;
-        grid-area: content;
-    }
+.nav {
+  grid-area: nav;
+  text-align: left;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
 
-    .nav {
-        grid-area: nav;
-        text-align: left;
-        flex-direction: row;
-        justify-content: space-evenly;
-    }
+.nav a,
+.links a {
+  background-color: rgb(0, 0, 0);
+  color: #b50202;
+  padding: 12pt;
+  margin: 8pt;
+  text-decoration: none;
+  border-radius: 50px;
+}
 
+.links {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 2pt;
+  flex-wrap: wrap;
+}
 
+.wrapper table {
+  width: 100%;
+  margin-top: 10pt;
+  margin-bottom: 10pt;
+  border: 2pt solid #000000;
+}
 
-    .nav a, .links a {
-        background-color: rgb(0, 0, 0);
-        color: #b50202;
-        padding: 12pt;
-        margin: 8pt;
-        text-decoration: none;
-        border-radius: 50px;
-    }
+.wrapper table td {
+  padding: 6pt;
+  border: 1pt solid #000000;
+}
 
-
-    .links {
-        display: inline-flex;
-        flex-direction: row;
-        justify-content: center;
-        margin: 2pt;
-        flex-wrap: wrap;
-    }
-
-    .wrapper table {
-        width: 100%;
-        margin-top: 10pt;
-        margin-bottom: 10pt;
-        border: 2pt solid #000000;
-    }
-
-    .wrapper table td {
-        padding: 6pt;
-        border: 1pt solid #000000;
-    }
-
-    .wrapper table th {
-        padding: 6pt;
-        border: 4pt solid #000000;
-    }
+.wrapper table th {
+  padding: 6pt;
+  border: 4pt solid #000000;
+}
 
 .headshot {
-    object-fit: fill;
-    width: 100%;
-    height: 50%;
-    border-radius: 100%;
-    border: 8pt dashed #711b4d;
+  object-fit: fill;
+  width: 100%;
+  height: 50%;
+  border-radius: 100%;
+  border: 8pt dashed #711b4d;
 }
 
 .sub {
-    font-size: 10pt;
-    font-weight: 300;
-    font-style: italic;
+  font-size: 10pt;
+  font-weight: 300;
+  font-style: italic;
 }
