--- a/homepage/good.css
+++ b/homepage/good.css
@@ -1,138 +1,139 @@
-@import url('https://fonts.googleapis.com/css2?family=Gloock&family=Mulish:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Gloock&family=Mulish:wght@300&display=swap");
 
+/* note: used MDN for documentation */
 
-  h1, h2, h3, h4, h5 {
-    font-family: 'Gloock', sans-serif;
-    font-weight: 400;
-        color: #76420e;
-    }
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Gloock", sans-serif;
+  font-weight: 400;
+  color: #76420e;
+}
 
-
-    body {
-        background-color: #fff2e7;
-    }
+body {
+  background-color: #fff2e7;
+}
 
 .wrapper {
-    display: grid;
-    max-width: 1280px;
-    margin: auto;
-    padding: 10pt;
-    gap: 2pt;
-    background-color: bisque;
-    color: #4e361e;
-    font-family: 'Mulish', sans-serif;
-    grid-template-columns: 30% auto;
+  display: grid;
+  max-width: 1280px;
+  margin: auto;
+  padding: 10pt;
+  gap: 2pt;
+  background-color: bisque;
+  color: #4e361e;
+  font-family: "Mulish", sans-serif;
+  grid-template-columns: 30% auto;
+  grid-template-areas:
+    "header header"
+    "nav nav"
+    "sidebar content";
+}
+
+@media screen and (max-width: 600px) {
+  .wrapper {
+    grid-template-columns: 100%;
     grid-template-areas:
-     "header header"
-     "nav nav"
-     "sidebar content"
+      "header"
+      "nav"
+      "sidebar"
+      "content";
   }
-
-  @media screen and (max-width: 600px) {
-    .wrapper {
-      grid-template-columns: 100%;
-      grid-template-areas:
-        "header"
-        "nav"
-        "sidebar"
-        "content";
-    }
-    .links {
-        width: 100%;
-        display: flex;
-        background-color: rgb(161, 98, 38);
-    }
-
+  .links {
+    width: 100%;
+    display: flex;
+    background-color: rgb(161, 98, 38);
   }
+}
 
-  .sidebar ul {
-    text-align: left;
-    padding: 0;
-    border-top: 1pt solid #bc8349;
+.sidebar ul {
+  text-align: left;
+  padding: 0;
+  border-top: 1pt solid #bc8349;
+}
 
-  }
+.sidebar ul li {
+  list-style-type: none;
+  padding: 6pt;
+  border-bottom: 1pt solid #bc8349;
+}
 
-  .sidebar ul li {
-    list-style-type: none;
-    padding: 6pt;
-    border-bottom: 1pt solid #bc8349;
-    }
+.header {
+  grid-area: header;
+  text-align: center;
+}
 
+.sidebar {
+  grid-area: sidebar;
+  text-align: center;
+}
 
-    .header {
-        grid-area: header;
-        text-align: center;
-    }
+.content {
+  padding: 10pt;
+  padding-left: 20pt;
+  padding-right: 20pt;
+  grid-area: content;
+}
 
-    .sidebar {
-        grid-area: sidebar;
-        text-align: center;
-    }
+.nav {
+  grid-area: nav;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 4pt;
+  background-color: rgb(161, 98, 38);
+}
 
-    .content {
-        padding: 10pt;
-        padding-left: 20pt;
-        padding-right: 20pt;
-        grid-area: content;
-    }
+.nav a,
+.links a {
+  background-color: rgb(161, 98, 38);
+  color: #ffffff;
+  padding: 6pt;
+  margin: 2pt;
+  text-decoration: none;
+}
 
-    .nav {
-        grid-area: nav;
-        text-align: center;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-bottom: 4pt;
-        background-color: rgb(161, 98, 38);
-    }
+.nav a:hover,
+.links a:hover {
+  background-color: rgb(178, 84, 8);
+}
 
+.links {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 2pt;
+  flex-wrap: wrap;
+}
 
+.wrapper table {
+  width: 100%;
+  margin-top: 10pt;
+  margin-bottom: 10pt;
+}
 
-    .nav a, .links a {
-        background-color: rgb(161, 98, 38);
-        color: #ffffff;
-        padding: 6pt;
-        margin: 2pt;
-        text-decoration: none;
-    }
+.wrapper table td {
+  padding: 6pt;
+  background-color: rgba(160, 85, 24, 0.2);
+}
 
-    .nav a:hover, .links a:hover {
-        background-color: rgb(178, 84, 8);
-    }
-
-    .links {
-        display: inline-flex;
-        flex-direction: row;
-        justify-content: center;
-        margin: 2pt;
-        flex-wrap: wrap;
-    }
-
-    .wrapper table {
-        width: 100%;
-        margin-top: 10pt;
-        margin-bottom: 10pt;
-    }
-
-    .wrapper table td {
-        padding: 6pt;
-        background-color: rgba(160, 85, 24, 0.2);
-    }
-
-    .wrapper table th {
-        padding: 6pt;
-        background-color: rgba(178, 84, 8, 0.4);
-    }
+.wrapper table th {
+  padding: 6pt;
+  background-color: rgba(178, 84, 8, 0.4);
+}
 
 .headshot {
-    object-fit: cover;
-    width: 100%;
-    height: 180pt;
-    box-shadow: 0 0 10pt rgba(0, 0, 0, 0.5);
+  object-fit: cover;
+  width: 100%;
+  height: 180pt;
+  box-shadow: 0 0 10pt rgba(0, 0, 0, 0.5);
 }
 
 .sub {
-    font-size: 10pt;
-    font-weight: 300;
-    font-style: italic;
+  font-size: 10pt;
+  font-weight: 300;
+  font-style: italic;
 }
